# iot-intrusion-detection

./: .gitignore  Dockerfile  README.md  capture.py  main.py  pyproject.toml  requirements.txt  test_predictions.py
api/: predictor.py  schema.py
models/: label_encoder.pkl  lgb_label_encoder.pkl  lgbm_model.txt  scaler.pkl  selected_features.json  thresholds.json  xgb_model.json
notebooks/: 01_eda.ipynb  02_feature_selection.ipynb  03_lstm_training.ipynb
results/: lgb_result.txt  xgb_v2_result.txt
src/: config.py  evaluate.py  feature_selection.py  lgb_training.py  preprocessing.py  threshold_tuning.py  training.py
tests/: test_api.py
